Project_Hierarchy_jira_processor